--- a/data_visualization/dashboard_data_QCQA.Rmd
+++ b/data_visualization/dashboard_data_QCQA.Rmd
@@ -23,7 +23,9 @@ library(knitr)
 # Comments/Notes
 # 1) Make variables generalizable for different variable names - USE AMERIFLUX NAMES HERE
 # 2) NEED TO ADD 7200, 7700 temp and 7200 RH & CHECK WHICH TEMP IS USED TO SONIC (cross wind corrected or no)
-# 3) Think about output directory (can change by replacing dirname(inputFile) above)
+# 3) Try to track down WD_CUP at all sites
+# 4) Remove duplicate variables (e.g., wind )
+# 4) Think about output directory (can change by replacing 'dirname(inputFile)' above)
 ```
 
 <!-- specify init file to read -->
@@ -95,6 +97,31 @@ Column {data-width=600}
 -----------------------------------------------------------------------
 
 ### Radiation timeseries  
+```{r}
+radiation_plots(data,vars_radiometer,vars_NETRAD,vars_PPFD)
+```
+
+Column {data-width=400}
+-----------------------------------------------------------------------
+
+### SW_IN vs PPDF_IN
+```{r}
+scatter_plot_QCQA(data,data$SHORTWAVE_IN,data$INCOMING_PAR,data$year,"SHORTWAVE_IN","INCOMING_PAR")
+```
+
+### SW_OUT vs PPFD_IN
+
+```{r}
+scatter_plot_QCQA(data,data$SHORTWAVE_OUT,data$REFLECTED_PAR,data$year,"SHORTWAVE_OUT","REFLECTED_PAR")
+```
+
+Radiation data  
+=======================================================================
+
+Column {data-width=600}
+-----------------------------------------------------------------------
+
+### Air pressure and precipitation  
 ```{r}
 radiation_plots(data,vars_radiometer,vars_NETRAD,vars_PPFD)
 ```
