--- a/data_visualization/dashboard_data_QCQA.Rmd
+++ b/data_visualization/dashboard_data_QCQA.Rmd
@@ -21,11 +21,10 @@ library(knitr)
 
 ```{r echo=FALSE}
 # Comments/Notes
-# 1) Make variables generalizable for different variable names - USE AMERIFLUX NAMES HERE (make sure to update plots below) - make scatterplot generalizable
+# 1) Make variables generalizable for different variable names - USE AMERIFLUX NAMES HERE (make sure to update plots below) - make scatterplot generalizable - Temperature scatterplot could be more generalizable
 # 2) NEED TO ADD 7200, 7700 temp and 7200 RH & CHECK WHICH TEMP IS USED TO SONIC (cross wind corrected or no) ADD HERE after MEETING ON THURSDAY!
 # 3) Try to track down WD_CUP at all sites
-# 4) Remove duplicate variables (e.g., "WIND_VELOCITY_EC" = "wind_speed" -> remove "WIND_VELOCITY_EC";
-#air_temperature = AIR_TEMP_2M -> could remove air_temperature)
+# 4) Remove duplicate variables (e.g., see google sheets for tracking)
 # 5) Think about output directory (can change by replacing 'dirname(inputFile)' above)
 ```
 
@@ -56,12 +55,16 @@ Column {data-width=400}
 
 ### mean wind speed vs. u*
 ```{r}
-scatter_plot_QCQA(data,data$wind_speed,data$u_,data$year,"wind_speed","u_") 
+scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_WS[1]))),
+                  sqrt(eval(parse(text = paste0("data$",vars_other_sonic[1])))),
+                  year,"WD (m/s)","USTAR (m/s)")
 ```
 
 ### sigma_w vs. u*
 ```{r}
-scatter_plot_QCQA(data,data$u_,sqrt(data$w_var),data$year,"u_","sqrt(data$w_var)")
+scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_other_sonic[1]))),
+                  sqrt(eval(parse(text = paste0("data$",wind_variance[1])))),
+                  year,"USTAR (m/s)","W_SIGMA (m/s")
 ```
 
 Temperature data 
@@ -80,14 +83,19 @@ Column {data-width=400}
 
 ### Temperature scatterplot
 ```{r}
-p <- scatter_plot_temp_QCQA(data,data$AIR_TEMP_2M,data$sonic_temperature-273.15,data$air_t_mean-273.15,c("sonic_temperature","air_t_mean"),"HMP Air temperature (°C)","Other Air Temperature (°C)")
-toWebGL(ggplotly(p))
+scatter_plot_temp_QCQA(data,eval(parse(text = paste0("data$",vars_temp[1]))),
+                       eval(parse(text = paste0("data$",vars_temp[2]))),
+                       eval(parse(text = paste0("data$",vars_temp[3]))),
+                       c("Sonic","7700"),
+                       "HMP Air temperature (°C)","Other Air Temperature (°C)")
 ```
 
 ### RH HMP vs. RH 7200
 
 ```{r}
-scatter_plot_QCQA(data,data$RH_2M,data$RH,data$year,"HMP RH","LI-7200 RH") # 
+scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_RH[1]))),
+                  eval(parse(text = paste0("data$",vars_RH[2]))),year,
+                  "HMP RH (%)","LI-7200 RH (%)")
 ```
 
 
@@ -107,24 +115,31 @@ Column {data-width=400}
 
 ### SW_IN vs PPDF_IN
 ```{r}
-scatter_plot_QCQA(data,data$SHORTWAVE_IN,data$INCOMING_PAR,data$year,"SHORTWAVE_IN","INCOMING_PAR")
+scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_radiometer[1]))),
+                  eval(parse(text = paste0("data$",vars_PPFD[1]))),
+                  year,"SW_IN (W/m2)","PPFD_IN (µmolPhoton/m2/s1)")
 ```
 
-### SW_OUT vs PPFD_IN
+### SW_OUT vs PPFD_OUT
 
 ```{r}
-scatter_plot_QCQA(data,data$SHORTWAVE_OUT,data$REFLECTED_PAR,data$year,"SHORTWAVE_OUT","REFLECTED_PAR")
+scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_radiometer[2]))),
+                  eval(parse(text = paste0("data$",vars_PPFD[2]))),
+                  year,"SW_OUT (W/m2)","PPFD_OUT (µmolPhoton/m2/s1)")
 ```
 
-Radiation data  
+Barometric pressure and other variables   
 =======================================================================
 
 Column {data-width=600}
 -----------------------------------------------------------------------
 
-### Air pressure and precipitation  
+### Atmospheric pressure and precipitation  
 ```{r}
-radiation_plots(data,vars_radiometer,vars_NETRAD,vars_PPFD)
+# Barometric pressure 
+plotly_loop(data,vars_pressure)%>%
+  layout(yaxis = list(title = "Barometric pressure (units)"))%>%
+  toWebGL()
 ```
 
 Column {data-width=400}
@@ -132,13 +147,12 @@ Column {data-width=400}
 
 ### SW_IN vs PPDF_IN
 ```{r}
-scatter_plot_QCQA(data,data$SHORTWAVE_IN,data$INCOMING_PAR,data$year,"SHORTWAVE_IN","INCOMING_PAR")
+
 ```
 
 ### SW_OUT vs PPFD_IN
-
 ```{r}
-scatter_plot_QCQA(data,data$SHORTWAVE_OUT,data$REFLECTED_PAR,data$year,"SHORTWAVE_OUT","REFLECTED_PAR")
+
 ```
 
 
