updated variables in plots

--- a/data_visualization/dashboard_data_QCQA.Rmd
+++ b/data_visualization/dashboard_data_QCQA.Rmd
@@ -4,7 +4,7 @@ knit: (function(inputFile, encoding) { rmarkdown::render(inputFile, encoding = e
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
-    vertical_layout: fill
+    vertical_layout: scroll
 ---
 <!-- NOTES: 
 1) Make sure to update file name in knit above (e.g., BB2_data_QCQA.html) 
@@ -21,7 +21,8 @@ library(knitr)
 
 ```{r echo=FALSE}
 # Comments/Notes
-# 1) Make variables generalizable for different variable names - USE AMERIFLUX NAMES HERE (make sure to update plots below) - make scatterplot generalizable - Temperature scatterplot could be more generalizable
+# 1) Make variables generalizable for different variable names - USE AMERIFLUX NAMES HERE (make sure to update plots below) - make scatterplot generalizable - Temperature scatterplot could be more generalizable & make line names more generalizable
+
 # 2) NEED TO ADD 7200, 7700 temp and 7200 RH & CHECK WHICH TEMP IS USED TO SONIC (cross wind corrected or no) ADD HERE after MEETING ON THURSDAY!
 # 3) Try to track down WD_CUP at all sites
 # 4) Remove duplicate variables (e.g., see google sheets for tracking)
@@ -64,10 +65,10 @@ scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_WS[1]))),
 ```{r}
 scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_other_sonic[1]))),
                   sqrt(eval(parse(text = paste0("data$",wind_variance[1])))),
-                  year,"USTAR (m/s)","W_SIGMA (m/s")
+                  year,"USTAR (m/s)","W_SIGMA (m/s)")
 ```
 
-Temperature data 
+Temp/RH 
 =======================================================================
 
 Column {data-width=600}
@@ -99,7 +100,7 @@ scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_RH[1]))),
 ```
 
 
-Radiation data  
+Radiation  
 =======================================================================
 
 Column {data-width=600}
@@ -128,24 +129,25 @@ scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_radiometer[2]))),
                   year,"SW_OUT (W/m2)","PPFD_OUT (µmolPhoton/m2/s1)")
 ```
 
-Barometric pressure and other variables   
+Pressure 
 =======================================================================
 
 Column {data-width=600}
 -----------------------------------------------------------------------
 
-### Atmospheric pressure and precipitation  
+### Pressure 
 ```{r}
 # Barometric pressure 
-plotly_loop(data,vars_pressure)%>%
+pressure_p <- plotly_loop(data,vars_pressure)%>%
   layout(yaxis = list(title = "Barometric pressure (units)"))%>%
   toWebGL()
+
 ```
 
 Column {data-width=400}
 -----------------------------------------------------------------------
 
-### SW_IN vs PPDF_IN
+### Pressure comparison
 ```{r}
 
 ```
@@ -155,4 +157,41 @@ Column {data-width=400}
 
 ```
 
+Other met {data-orientation=rows} 
+=======================================================================
+Row {data-height=600}
+-------------------------------------
 
+### Chart 1
+
+```{r}
+# wind direction plot
+  yaxlabel <- c("Wind direction (degrees)")
+  WD_plot <- plotly_loop(data,var_WD)%>%
+    layout(yaxis = list(title = yaxlabel))%>%
+    toWebGL()
+  
+  plots[[2]] <- WD_plot
+  
+  # all variables except wind speed and wind direction
+  for (i in 1:(length(var))){
+    plots[[i+2]] <- plot_ly(data, x = ~datetime, y = as.formula(paste0("~", var[i]))) %>%
+      add_lines(name = var[i])%>% 
+      layout(yaxis = list(title = unit[i]))%>%
+      toWebGL()
+  }
+  
+```
+
+Row {data-height=400}
+-------------------------------------
+   
+### Chart 2
+
+```{r}
+```   
+    
+### Chart 3
+
+```{r}
+```
