--- a/data_visualization/dashboard_data_QCQA.Rmd
+++ b/data_visualization/dashboard_data_QCQA.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 <!-- NOTES: 
 1) Make sure to update file name in knit above (e.g., BB2_data_QCQA.html) 
-2) Update init file below (e.g., BB2_data_QCQA.R) -->
+2) Update init file (e.g., BB2_data_QCQA.R) -->
 
 ```{r setup, include=FALSE}
 library(flexdashboard)
@@ -17,6 +17,13 @@ library(dplyr)
 library(plotly)
 library(ggplot2)
 library(knitr)
+library(lubridate)
+library(hms)
+library(gridExtra)
+library(amerifluxr)
+library(heatmaply)
+library(data.table)
+library(ggpmisc)
 ```
 
 ```{r echo=FALSE}
@@ -27,6 +34,7 @@ library(knitr)
 # 3) Try to track down WD_CUP at all sites
 # 4) Remove duplicate variables (e.g., see google sheets for tracking)
 # 5) Think about output directory (can change by replacing 'dirname(inputFile)' above)
+# 6) Add EBC
 ```
 
 <!-- specify init file to read -->
@@ -55,16 +63,15 @@ Column {data-width=400}
 
 ### mean wind speed vs. u*
 ```{r}
-scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_WS[1]))),
-                  sqrt(eval(parse(text = paste0("data$",vars_other_sonic[1])))),
-                  year,"WD (m/s)","USTAR (m/s)")
+scatter_plot_QCQA(data,vars_WS[1],vars_other_sonic[1],
+                  "WS (m/s)","USTAR (m/s)",0)
 ```
 
 ### sigma_w vs. u*
 ```{r}
-scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_other_sonic[1]))),
-                  sqrt(eval(parse(text = paste0("data$",wind_variance[1])))),
-                  year,"USTAR (m/s)","W_SIGMA (m/s)")
+scatter_plot_QCQA(data,vars_other_sonic[1],
+                  wind_std,
+                  "USTAR (m/s)","W_SIGMA (m/s)",0)
 ```
 
 Temp/RH 
@@ -93,11 +100,11 @@ scatter_plot_temp_QCQA(data,eval(parse(text = paste0("data$",vars_temp[1]))),
 ### RH HMP vs. RH 7200
 
 ```{r}
-scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_RH[1]))),
-                  eval(parse(text = paste0("data$",vars_RH[2]))),year,
-                  "HMP RH (%)","LI-7200 RH (%)")
+scatter_plot_QCQA(eval(parse(text = paste0("data$",vars_RH[1]))),
+                  eval(parse(text = paste0("data$",vars_RH[2]))),
+                  eval(parse(text ="data$year")),
+                  "HMP RH (%)","LI-7200 RH (%)",0)
 ```
-
 
 Radiation  
 =======================================================================
@@ -115,17 +122,17 @@ Column {data-width=400}
 
 ### SW_IN vs PPDF_IN
 ```{r}
-scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_radiometer[1]))),
+scatter_plot_QCQA(eval(parse(text = paste0("data$",vars_radiometer[1]))),
                   eval(parse(text = paste0("data$",vars_PPFD[1]))),
-                  year,"SW_IN (W/m2)","PPFD_IN (µmolPhoton/m2/s1)")
+                  data$year,"SW_IN (W/m2)","PPFD_IN (µmolPhoton/m2/s1)",0)
 ```
 
 ### SW_OUT vs PPFD_OUT
 
 ```{r}
-scatter_plot_QCQA(data,eval(parse(text = paste0("data$",vars_radiometer[2]))),
+scatter_plot_QCQA(eval(parse(text = paste0("data$",vars_radiometer[2]))),
                   eval(parse(text = paste0("data$",vars_PPFD[2]))),
-                  year,"SW_OUT (W/m2)","PPFD_OUT (µmolPhoton/m2/s1)")
+                  data$year,"SW_OUT (W/m2)","PPFD_OUT (µmolPhoton/m2/s1)",0)
 ```
 
 Pressure 
