--- a/data_visualization/stages_check/DSM_data_secondstage.Rmd
+++ b/data_visualization/stages_check/DSM_data_secondstage.Rmd
@@ -85,7 +85,6 @@ for (j in 1:(length(vars_stagetwo))) {
   ind <- is.nan(var_stageone) 
   var_stageone[ind] <- NA
   
-  
   df <- data.frame(datetime, var_stagetwo,var_stageone)
   colors <- c("stage one" = "red", "stage two" = "steelblue")
   
@@ -97,18 +96,7 @@ for (j in 1:(length(vars_stagetwo))) {
     theme(legend.position="top",
           legend.title=element_blank())
   
-  # p <-      ggplotly(p) %>%
-  #    toWebGL()
-  
-  # 
-  # p <- plot_ly(data = df, x = ~datetime, y = ~var_clean, name = 'clean trace', type = 'scatter', mode = 'markers') %>%
-  #   add_trace(y = ~var_orig, name = 'original trace', type = 'scatter', mode = 'markers') %>%
-  #   layout(yaxis = list(title = var_clean_name))%>%
-  #   toWebGL()
-  
-  plots[[j]] <- p#%>% 
-  #layout(yaxis = list(title =yaxlabel[i]))%>%
-  #toWebGL()
+  plots[[j]] <- p
   graphics.off()
 }
 ```
@@ -126,7 +114,6 @@ plots
 vars_stageone_met <-  list.files(paste0(basepath,"/",yrs,"/",site,"/","Met","/clean",sep = ""))
 
 basepath <- "/Users/sara/Library/CloudStorage/OneDrive-UBC/UBC/database"
-
 yrs <- c(2022)
 site <- "DSM"
 level <- c("Flux")
@@ -168,6 +155,7 @@ for (j in 1:(length(vars_stagetwo))) {
   # plot only stage two data if stage one data isn't available (and the variable is a flux variable), else plot stage one and stage two data
   if (length(ind) == 0 & length(which(vars_stageone_met == var_stagetwo_name)) == 0) {
     
+    df <- data.frame(datetime,var_stagetwo)
     p <- ggplot() + 
       geom_point(data = df, aes(x = datetime, y = var_stagetwo)) +
       ylab(var_stagetwo_name) +  xlab("Date") 
@@ -201,18 +189,7 @@ for (j in 1:(length(vars_stagetwo))) {
       theme(legend.position="top",
             legend.title=element_blank())
     
-    # p <-      ggplotly(p) %>%
-    #    toWebGL()
-    
-    # 
-    # p <- plot_ly(data = df, x = ~datetime, y = ~var_clean, name = 'clean trace', type = 'scatter', mode = 'markers') %>%
-    #   add_trace(y = ~var_orig, name = 'original trace', type = 'scatter', mode = 'markers') %>%
-    #   layout(yaxis = list(title = var_clean_name))%>%
-    #   toWebGL()
-    
-    plots[[j]] <- p#%>% 
-    #layout(yaxis = list(title =yaxlabel[i]))%>%
-    #toWebGL()
+    plots[[j]] <- p
     graphics.off()
   }
 }
