updated plotting tools and third stage cleaning code

--- a/data_visualization/stages_check/DSM_data_secondstage.Rmd
+++ b/data_visualization/stages_check/DSM_data_secondstage.Rmd
@@ -32,61 +32,81 @@ here you can visualize all the variables from second stage data cleaning and ass
 # Could make fancier with shiny
 basepath <- "/Users/sara/Library/CloudStorage/OneDrive-UBC/UBC/database"
 
-yrs <- c(2022)
+yrs <- c(2021,2022)
 site <- "DSM"
 level <- c("Met")
 
 # Specify path for working directories from which to read variables
-wd_stagetwo <- paste0(basepath,"/",yrs,"/",site,"/clean/SecondStage",sep = "")
-wd_stageone <- paste0(basepath,"/",yrs,"/",site,"/",level,"/clean",sep = "")
+wd_stagetwo <- paste0(basepath,"/",yrs[1],"/",site,"/clean/SecondStage",sep = "")
+wd_stageone <- paste0(basepath,"/",yrs[1],"/",site,"/",level,"/clean",sep = "")
 
 # List all files in 'StageTwo' and from stage one folder
 # Generalize to loop through years
-vars_stagetwo <-  list.files(paste0(basepath,"/",yrs,"/",site,"/clean/SecondStage",sep = ""))
-vars_stageone <-  list.files(paste0(basepath,"/",yrs,"/",site,"/",level,"/clean",sep = ""))
+vars_stagetwo <-  list.files(paste0(basepath,"/",yrs[1],"/",site,"/clean/SecondStage",sep = ""))
+vars_stageone <-  list.files(paste0(basepath,"/",yrs[1],"/",site,"/",level,"/clean",sep = ""))
 
-# Define time vector for plotting
-setwd(wd_stagetwo)
-tv <- readBin("clean_tv",double(),n = 18000)
-datetime <- as.POSIXct((tv - 719529)*86400, origin = "1970-01-01", tz = "UTC")
-# Round to nearest 30 min
-datetime <- lubridate::round_date(datetime, "30 minutes") 
+k <- 0
+colors <- c("stage one" = "red", "stage two" = "steelblue")
 plots <- plot.new()
+
 for (j in 1:(length(vars_stagetwo))) { 
+  l <- list()
+  for (i in 1:length(yrs)) { 
+    
+    # Specify path for working directories from which to read variables
+    wd_stagetwo <- paste0(basepath,"/",yrs[i],"/",site,"/clean/SecondStage",sep = "")
+    wd_stageone <- paste0(basepath,"/",yrs[i],"/",site,"/",level,"/clean",sep = "")
+    
+    # Define time vector for plotting
+    setwd(wd_stagetwo)
+    tv <- readBin("clean_tv",double(),n = 18000)
+    datetime <- as.POSIXct((tv - 719529)*86400, origin = "1970-01-01", tz = "UTC")
+    # Round to nearest 30 min
+    datetime <- lubridate::round_date(datetime, "30 minutes") 
+    
+    # Load stagetwo trace
+    var_stagetwo_name <- vars_stagetwo[j]
+    
+    # Skip tv varibles
+    if (var_stagetwo_name == "clean_tv") next
+    
+    setwd(wd_stagetwo)
+    var_stagetwo <- readBin(var_stagetwo_name,numeric(),n = 18000,size = 4)
+    
+    # Replace NaN with NA
+    ind <- is.nan(var_stagetwo) 
+    var_stagetwo[ind] <- NA
+    
+    # Load original trace
+    ind <- which(vars_stageone == var_stagetwo_name)
+    
+    # skip variable if it's not in stage one
+    if (length(ind) == 0) next
+    
+    var_stageone_name <- vars_stageone[ind]
+    #var_orig_name <- paste0("var_name_mapping$Orig_db_name_",level[i],sep = "")[ind]
+    
+    print(paste0('stage one name = ',var_stageone_name, ' | stage two name = ',var_stagetwo_name ,sep = ''))
+    
+    setwd(wd_stageone) # If getting error 'cannot change working directory', make sure you are connected to vinimet
+    var_stageone <- readBin(var_stageone_name,numeric(),n = 18000,size = 4)
+    
+    # Replace NaN with NA
+    ind <- is.nan(var_stageone) 
+    var_stageone[ind] <- NA
+    
+    df.now <- data.frame(datetime, var_stagetwo,var_stageone)
+    l[[i]] <- df.now
+    
+  }
   
-  # Load stagetwo trace
-  var_stagetwo_name <- vars_stagetwo[j]
-  
-  # Skip tv varibles
   if (var_stagetwo_name == "clean_tv") next
-  
-  setwd(wd_stagetwo)
-  var_stagetwo <- readBin(var_stagetwo_name,numeric(),n = 18000,size = 4)
-  
-  # Replace NaN with NA
-  ind <- is.nan(var_stagetwo) 
-  var_stagetwo[ind] <- NA
-  
-  # Load original trace
-  ind <- which(vars_stageone == var_stagetwo_name)
-  
-  # skip variable if it's not in stage one
   if (length(ind) == 0) next
   
-  var_stageone_name <- vars_stageone[ind]
-  #var_orig_name <- paste0("var_name_mapping$Orig_db_name_",level[i],sep = "")[ind]
+  k <- k+1
+  print(k)
   
-  print(paste0('stage one name = ',var_stageone_name, ' stage two name = ',var_stagetwo_name ,sep = ''))
-  
-  setwd(wd_stageone) # If getting error 'cannot change working directory', make sure you are connected to vinimet
-  var_stageone <- readBin(var_stageone_name,numeric(),n = 18000,size = 4)
-  
-  # Replace NaN with NA
-  ind <- is.nan(var_stageone) 
-  var_stageone[ind] <- NA
-  
-  df <- data.frame(datetime, var_stagetwo,var_stageone)
-  colors <- c("stage one" = "red", "stage two" = "steelblue")
+  df <- do.call(rbind,l)
   
   p <- ggplot() + 
     geom_point(data = df, aes(x = datetime, y = var_stageone, color = "stage one")) +
@@ -96,7 +116,7 @@ for (j in 1:(length(vars_stagetwo))) {
     theme(legend.position="top",
           legend.title=element_blank())
   
-  plots[[j]] <- p
+  plots[[k]] <- p
   graphics.off()
 }
 ```
@@ -111,51 +131,91 @@ plots
 # Could make fancier with shiny
 
 # List all files in met 'StageOne' 
-vars_stageone_met <-  list.files(paste0(basepath,"/",yrs,"/",site,"/","Met","/clean",sep = ""))
+vars_stageone_met <-  list.files(paste0(basepath,"/",yrs[1],"/",site,"/","Met","/clean",sep = ""))
 
 basepath <- "/Users/sara/Library/CloudStorage/OneDrive-UBC/UBC/database"
-yrs <- c(2022)
+yrs <- c(2021,2022)
 site <- "DSM"
 level <- c("Flux")
 
 # Specify path for working directories from which to read variables
-wd_stagetwo <- paste0(basepath,"/",yrs,"/",site,"/clean/SecondStage",sep = "")
-wd_stageone <- paste0(basepath,"/",yrs,"/",site,"/",level,"/clean",sep = "")
+wd_stagetwo <- paste0(basepath,"/",yrs[1],"/",site,"/clean/SecondStage",sep = "")
+wd_stageone <- paste0(basepath,"/",yrs[1],"/",site,"/",level,"/clean",sep = "")
 
 # List all files in 'StageTwo' and from stage one folder
 # Generalize to loop through years
-vars_stagetwo <-  list.files(paste0(basepath,"/",yrs,"/",site,"/clean/SecondStage",sep = ""))
-vars_stageone <-  list.files(paste0(basepath,"/",yrs,"/",site,"/",level,"/clean",sep = ""))
+vars_stagetwo <-  list.files(paste0(basepath,"/",yrs[1],"/",site,"/clean/SecondStage",sep = ""))
+vars_stageone <-  list.files(paste0(basepath,"/",yrs[1],"/",site,"/",level,"/clean",sep = ""))
 
-# Define time vector for plotting
-setwd(wd_stagetwo)
-tv <- readBin("clean_tv",double(),n = 18000)
-datetime <- as.POSIXct((tv - 719529)*86400, origin = "1970-01-01", tz = "UTC")
-# Round to nearest 30 min
-datetime <- lubridate::round_date(datetime, "30 minutes") 
+k <- 0
+colors <- c("stage one" = "red", "stage two" = "steelblue")
 plots <- plot.new()
+
 for (j in 1:(length(vars_stagetwo))) { 
+  l <- list()
+  for (i in 1:length(yrs)) { 
+    
+    wd_stagetwo <- paste0(basepath,"/",yrs[i],"/",site,"/clean/SecondStage",sep = "")
+    wd_stageone <- paste0(basepath,"/",yrs[i],"/",site,"/",level,"/clean",sep = "")
+    
+    # Define time vector for plotting
+    setwd(wd_stagetwo)
+    tv <- readBin("clean_tv",double(),n = 18000)
+    datetime <- as.POSIXct((tv - 719529)*86400, origin = "1970-01-01", tz = "UTC")
+    # Round to nearest 30 min
+    datetime <- lubridate::round_date(datetime, "30 minutes") 
+    
+    # Load stage two trace
+    var_stagetwo_name <- vars_stagetwo[j]
+    
+    # Skip tv variables
+    if (var_stagetwo_name == "clean_tv") next
+    
+    setwd(wd_stagetwo)
+    var_stagetwo <- readBin(var_stagetwo_name,numeric(),n = 18000,size = 4)
+    
+    # Replace NaN with NA
+    ind <- is.nan(var_stagetwo) 
+    var_stagetwo[ind] <- NA
+    
+    # Load original trace
+    ind <- which(vars_stageone == var_stagetwo_name)
+    
+    # plot only stage two data if stage one data isn't available (and the variable is a flux variable), else plot stage one and stage two data
+    if (length(ind) == 0 & length(which(vars_stageone_met == var_stagetwo_name)) == 0) {
+      
+      df.now <- data.frame(datetime, var_stagetwo,var_stageone)
+      l[[i]] <- df.now
+      
+      print(paste0('stage two only = ',var_stagetwo_name ,sep = ''))
+      
+    } else if (length(ind) != 0)  {
+      
+      var_stageone_name <- vars_stageone[ind]
+      #var_orig_name <- paste0("var_name_mapping$Orig_db_name_",level[i],sep = "")[ind]
+      
+      print(paste0('stage one name = ',var_stageone_name, ' | stage two name = ',var_stagetwo_name ,sep = ''))
+      
+      setwd(wd_stageone) # If getting error 'cannot change working directory', make sure you are connected to vinimet
+      var_stageone <- readBin(var_stageone_name,numeric(),n = 18000,size = 4)
+      
+      # Replace NaN with NA
+      ind <- is.nan(var_stageone) 
+      var_stageone[ind] <- NA
+      
+      df.now <- data.frame(datetime, var_stagetwo,var_stageone)
+      l[[i]] <- df.now
+    }
+  }
   
-  # Load stage two trace
-  var_stagetwo_name <- vars_stagetwo[j]
-  
-  # Skip tv variables
   if (var_stagetwo_name == "clean_tv") next
   
-  setwd(wd_stagetwo)
-  var_stagetwo <- readBin(var_stagetwo_name,numeric(),n = 18000,size = 4)
-  
-  # Replace NaN with NA
-  ind <- is.nan(var_stagetwo) 
-  var_stagetwo[ind] <- NA
-  
-  # Load original trace
-  ind <- which(vars_stageone == var_stagetwo_name)
-  
-  # plot only stage two data if stage one data isn't available (and the variable is a flux variable), else plot stage one and stage two data
   if (length(ind) == 0 & length(which(vars_stageone_met == var_stagetwo_name)) == 0) {
     
-    df <- data.frame(datetime,var_stagetwo)
+    k <- k+1
+    print(k)
+    
+    df <- do.call(rbind,l)
     p <- ggplot() + 
       geom_point(data = df, aes(x = datetime, y = var_stagetwo)) +
       ylab(var_stagetwo_name) +  xlab("Date") 
@@ -165,21 +225,11 @@ for (j in 1:(length(vars_stagetwo))) {
     
   } else if (length(ind) != 0)  {
     
-    var_stageone_name <- vars_stageone[ind]
-    #var_orig_name <- paste0("var_name_mapping$Orig_db_name_",level[i],sep = "")[ind]
+    k <- k+1
+    print(k)
     
-    print(paste0('stage one name = ',var_stageone_name, ' stage two name = ',var_stagetwo_name ,sep = ''))
+    df <- do.call(rbind,l) 
     
-    setwd(wd_stageone) # If getting error 'cannot change working directory', make sure you are connected to vinimet
-    var_stageone <- readBin(var_stageone_name,numeric(),n = 18000,size = 4)
-    
-    # Replace NaN with NA
-    ind <- is.nan(var_stageone) 
-    var_stageone[ind] <- NA
-    
-    
-    df <- data.frame(datetime, var_stagetwo,var_stageone)
-    colors <- c("stage one" = "red", "stage two" = "steelblue")
     
     p <- ggplot() + 
       geom_point(data = df, aes(x = datetime, y = var_stageone, color = "stage one")) +
