--- a/data_visualization/stages_check/DSM_data_firststage.Rmd
+++ b/data_visualization/stages_check/DSM_data_firststage.Rmd
@@ -35,87 +35,96 @@ basepath_clean <- "/Users/sara/Library/CloudStorage/OneDrive-UBC/UBC/database"
 
 mapping_doc <- "name_mapping_DSM.xlsx"
 
-yrs <- c(2022)
+yrs <- c(2021,2022)
 site <- "DSM"
 level <- c("Met")
 
 # Load variable name mapping document
 library("readxl")
-var_name_mapping <- read_excel(paste0(basepath_clean,"/",mapping_doc,sep = ""))
+var_name_mapping <- read_excel(paste('/Users/sara/Code/MLABcode/data_visualization/stages_check/',mapping_doc, sep = ""))
 
-# Specify path for working directories from which to read variables
-wd_clean <- paste0(basepath_clean,"/",yrs,"/",site,"/",level,"/clean",sep = "")
-wd_orig <- paste0(basepath_orig,"/",yrs,"/",site,"/",level,sep = "")
+colors <- c("Original" = "lightgray", "Clean" = "steelblue")
+plots <- plot.new()
+
+# Specify path for working directories from which to read variables - Assumes the same variables across years (could update this if needed)
+wd_clean <- paste0(basepath_clean,"/",yrs[1],"/",site,"/",level,"/clean",sep = "")
+wd_orig <- paste0(basepath_orig,"/",yrs[1],"/",site,"/",level,sep = "")
 
 # List all files in 'Clean' folder
 # Generalize to loop through years
-vars_clean <-  list.files(paste0(basepath_clean,"/",yrs,"/",site,"/",level,"/clean",sep = ""))
+vars_clean <-  list.files(paste0(basepath_clean,"/",yrs[1],"/",site,"/",level,"/clean",sep = ""))
+k <- 0
 
-# Define time vector for plotting
-setwd(wd_clean)
-tv <- readBin("clean_tv",double(),n = 18000)
-datetime <- as.POSIXct((tv - 719529)*86400, origin = "1970-01-01", tz = "UTC")
-# Round to nearest 30 min
-datetime <- lubridate::round_date(datetime, "30 minutes") 
-plots <- plot.new()
 for (j in 1:(length(vars_clean))) { 
+  l <- list()
+  for (i in 1:length(yrs)) { 
+    
+    # Specify path for working directories from which to read variables - Assumes the same variables across years (could update this if needed)
+    wd_clean <- paste0(basepath_clean,"/",yrs[i],"/",site,"/",level,"/clean",sep = "")
+    wd_orig <- paste0(basepath_orig,"/",yrs[i],"/",site,"/",level,sep = "")
+    
+    # Define time vector for plotting
+    setwd(wd_clean)
+    tv <- readBin("clean_tv",double(),n = 18000)
+    datetime <- as.POSIXct((tv - 719529)*86400, origin = "1970-01-01", tz = "UTC")
+    # Round to nearest 30 min
+    datetime <- lubridate::round_date(datetime, "30 minutes") 
+    
+    # Load clean trace
+    var_clean_name <- vars_clean[j]
+    # Create empty plot
+    
+    # Skip variables that aren't in both folders
+    if (var_clean_name == "clean_tv" | grepl('ECCC$', var_clean_name)| grepl('^RBM', 
+    var_clean_name)) next
+    
+    setwd(wd_clean)
+    var_clean <- readBin(var_clean_name,numeric(),n = 18000,size = 4)
+    
+    # Replace NaN with NA
+    ind <- is.nan(var_clean) 
+    var_clean[ind] <- NA
+    
+    # Load original trace
+    ind <- which(var_name_mapping$Name_in_db_clean == var_clean_name) 
+    var_orig_name <- var_name_mapping$Orig_db_name_met[ind]
+    #var_orig_name <- paste0("var_name_mapping$Orig_db_name_",level[i],sep = "")[ind]
+    
+    print(paste0('orig name = ',var_orig_name, ' | clean name = ',var_clean_name ,sep = ''))
+    
+    setwd(wd_orig) # If getting error 'cannot change working directory', make sure you are connected to vinimet
+    var_orig <- readBin(var_orig_name,numeric(),n = 18000,size = 4)
+    
+    # Apply unit conversions
+    var_orig <- var_orig*var_name_mapping$Slope[ind] + var_orig*var_name_mapping$Offset[ind]
+    
+    # Replace NaN with NA
+    ind <- is.nan(var_orig) 
+    var_orig[ind] <- NA
+    
+    df.now <- data.frame(datetime, var_clean,var_orig)
+    l[[i]] <- df.now
+  }
   
-  # Load clean trace
-  var_clean_name <- vars_clean[j]
-  # Create empty plot
+  if (var_clean_name == "clean_tv" | grepl('ECCC$', var_clean_name)| grepl('^RBM', var_clean_name)) next  
+  k <- k+1
+  print(k)
   
-  # Skip variables that aren't in both folders
-  if (var_clean_name == "clean_tv" | var_clean_name == "TA_ECCC"| var_clean_name == "RH_ECCC") next
+  df <- do.call(rbind,l)
   
-  setwd(wd_clean)
-  var_clean <- readBin(var_clean_name,numeric(),n = 18000,size = 4)
-  
-  # Replace NaN with NA
-  ind <- is.nan(var_clean) 
-  var_clean[ind] <- NA
-  
-  # Load original trace
-  ind <- which(var_name_mapping$Name_in_db_clean == var_clean_name) 
-  var_orig_name <- var_name_mapping$Orig_db_name_met[ind]
-  #var_orig_name <- paste0("var_name_mapping$Orig_db_name_",level[i],sep = "")[ind]
-  
-  print(paste0('orig name = ',var_orig_name, ' clean name = ',var_clean_name ,sep = ''))
-  
-  setwd(wd_orig) # If getting error 'cannot change working directory', make sure you are connected to vinimet
-  var_orig <- readBin(var_orig_name,numeric(),n = 18000,size = 4)
-  
-  # Apply unit conversions
-  var_orig <- var_orig*var_name_mapping$Slope[ind] + var_orig*var_name_mapping$Offset[ind]
-  
-  # Replace NaN with NA
-  ind <- is.nan(var_orig) 
-  var_orig[ind] <- NA
-  
-  
-  df <- data.frame(datetime, var_clean,var_orig)
-  colors <- c("Original" = "lightgray", "Clean" = "steelblue")
-
   p <- ggplot() + 
     geom_point(data = df, aes(x = datetime, y = var_orig, color = "Original")) +
     geom_point(data = df, aes(x = datetime, y = var_clean, color = "Clean")) +
     ylab(var_clean_name) +  xlab("Date") +
     scale_color_manual(values = colors)+
     theme(legend.position="top",
-        legend.title=element_blank())
+          legend.title=element_blank())
   
-  # p <-      ggplotly(p) %>%
-  #    toWebGL()
-  
-  # 
-  # p <- plot_ly(data = df, x = ~datetime, y = ~var_clean, name = 'clean trace', type = 'scatter', mode = 'markers') %>%
-  #   add_trace(y = ~var_orig, name = 'original trace', type = 'scatter', mode = 'markers') %>%
-  #   layout(yaxis = list(title = var_clean_name))%>%
-  #   toWebGL()
-  
-  plots[[j]] <- p#%>% 
+  plots[[k]] <- p#%>% 
   #layout(yaxis = list(title =yaxlabel[i]))%>%
   #toWebGL()
   graphics.off()
+  
 }
 ```
 
@@ -132,68 +141,80 @@ yrs <- c(2022)
 site <- "DSM"
 level <- c("Flux")
 
-# Specify path for working directories from which to read variables
-wd_clean <- paste0(basepath_clean,"/",yrs,"/",site,"/",level,"/clean",sep = "")
-wd_orig <- paste0(basepath_orig,"/",yrs,"/",site,"/",level,sep = "")
+colors <- c("Original" = "lightgray", "Clean" = "steelblue")
+plots <- plot.new()
+
+# Specify path for working directories from which to read variables - Assumes the same variables across years (could update this if needed)
+wd_clean <- paste0(basepath_clean,"/",yrs[1],"/",site,"/",level,"/clean",sep = "")
+wd_orig <- paste0(basepath_orig,"/",yrs[1],"/",site,"/",level,sep = "")
 
 # List all files in 'Clean' folder
 # Generalize to loop through years
-vars_clean <-  list.files(paste0(basepath_clean,"/",yrs,"/",site,"/",level,"/clean",sep = ""))
+vars_clean <-  list.files(paste0(basepath_clean,"/",yrs[1],"/",site,"/",level,"/clean",sep = ""))
+k <- 0
 
-# Define time vector for plotting
-setwd(wd_clean)
-tv <- readBin("clean_tv",double(),n = 18000)
-datetime <- as.POSIXct((tv - 719529)*86400, origin = "1970-01-01", tz = "UTC")
-# Round to nearest 30 min
-datetime <- lubridate::round_date(datetime, "30 minutes") 
-plots <- plot.new()
-for (j in 1:(length(vars_clean)) ){ 
+for (j in 1:(length(vars_clean))) { 
+  l <- list()
   
-  # Load clean trace
-  var_clean_name <- vars_clean[j]
-  # Create empty plot
-  
-  # Skip variables that aren't in both folders
-  if (var_clean_name == "clean_tv") next
-  
-  setwd(wd_clean)
-  var_clean <- readBin(var_clean_name,numeric(),n = 18000,size = 4)
-  
-  # Replace NaN with NA
-  ind <- is.nan(var_clean) 
-  var_clean[ind] <- NA
-  
-  # Load original trace
-  ind <- which(var_name_mapping$Name_in_db_clean == var_clean_name) #CHECK!!!
-  var_orig_name <- var_name_mapping$Orig_db_name_flux[ind]
-  #var_orig_name <- paste0("var_name_mapping$Orig_db_name_",level[i],sep = "")[ind]
-  
-  print(paste0('orig name = ',var_orig_name, ' clean name = ',var_clean_name ,sep = ''))
-  
-  setwd(wd_orig) # If getting error 'cannot change working directory', make sure you are connected to vinimet
-  var_orig <- readBin(var_orig_name,numeric(),n = 18000,size = 4)
-  
+  for (i in 1:length(yrs)) {
+    # Specify path for working directories from which to read variables
+    wd_clean <- paste0(basepath_clean,"/",yrs[i],"/",site,"/",level,"/clean",sep = "")
+    wd_orig <- paste0(basepath_orig,"/",yrs[i],"/",site,"/",level,sep = "")
+    
+    # Define time vector for plotting
+    setwd(wd_clean)
+    tv <- readBin("clean_tv",double(),n = 18000)
+    datetime <- as.POSIXct((tv - 719529)*86400, origin = "1970-01-01", tz = "UTC")
+    # Round to nearest 30 min
+    datetime <- lubridate::round_date(datetime, "30 minutes") 
+    
+    # Load clean trace
+    var_clean_name <- vars_clean[j]
+    # Create empty plot
+    
+    # Skip variables that aren't in both folders
+    if (var_clean_name == "clean_tv") next
+    
+    setwd(wd_clean)
+    var_clean <- readBin(var_clean_name,numeric(),n = 18000,size = 4)
+    
+    # Replace NaN with NA
+    ind <- is.nan(var_clean) 
+    var_clean[ind] <- NA
+    
+    # Load original trace
+    ind <- which(var_name_mapping$Name_in_db_clean == var_clean_name) #CHECK!!!
+    var_orig_name <- var_name_mapping$Orig_db_name_flux[ind]
+    #var_orig_name <- paste0("var_name_mapping$Orig_db_name_",level[i],sep = "")[ind]
+    
+    if (length(var_orig_name) == 0) next
+    
+    print(paste0('orig name = ',var_orig_name, '| clean name = ',var_clean_name ,sep = ''))
+    
+    setwd(wd_orig) # If getting error 'cannot change working directory', make sure you are connected to vinimet
+    var_orig <- readBin(var_orig_name,numeric(),n = 18000,size = 4)
+    
     # Apply unit conversions
-  var_orig <- var_orig*var_name_mapping$Slope[ind] + var_orig*var_name_mapping$Offset[ind]
+    var_orig <- var_orig*var_name_mapping$Slope[ind] + var_orig*var_name_mapping$Offset[ind]
+    
+    # Replace NaN with NA
+    ind <- is.nan(var_orig) 
+    var_orig[ind] <- NA
+    
+    df.now <- data.frame(datetime, var_clean,var_orig)
+    l[[i]] <- df.now
+  }
   
-  # Replace NaN with NA
-  ind <- is.nan(var_orig) 
-  var_orig[ind] <- NA
+  if (length(var_orig_name) == 0) next  
+  k <- k+1
+  print(k)
   
-  df <- data.frame(datetime, var_clean,var_orig)
+  df <- do.call(rbind,l)
+  
   p <- ggplot() + 
     geom_point(data = df, aes(x = datetime, y = var_orig), color = "lightgray") +
     geom_point(data = df, aes(x = datetime, y = var_clean), color = "steelblue") +
     ylab(var_clean_name) +  xlab("Date")
-  
-  # p <-      ggplotly(p) %>%
-  #    toWebGL()
-  
-  # 
-  # p <- plot_ly(data = df, x = ~datetime, y = ~var_clean, name = 'clean trace', type = 'scatter', mode = 'markers') %>%
-  #   add_trace(y = ~var_orig, name = 'original trace', type = 'scatter', mode = 'markers') %>%
-  #   layout(yaxis = list(title = var_clean_name))%>%
-  #   toWebGL()
   
   plots[[j]] <- p#%>% 
   #layout(yaxis = list(title =yaxlabel[i]))%>%
