--- a/data_visualization/dashboard_data_QCQA.Rmd
+++ b/data_visualization/dashboard_data_QCQA.Rmd
@@ -38,11 +38,11 @@ library(ggpmisc)
 ```
 
 <!-- specify init file to read -->
-```{r echo=FALSE}
+```{r echo=FALSE, include=FALSE}
 read_chunk('ini_files/DSM_v2_data_QCQA.R')
 ```
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, include=FALSE}
 <<LoadData>>
 ```
 
@@ -99,7 +99,7 @@ scatter_plot_QCQA(data,vars_temp[1],vars_temp[2],"HMP Air temperature (°C)","Ot
 scatter_plot_QCQA(data,vars_RH[1],vars_RH[2], "HMP RH (%)","LI-7200 RH (%)",0)
 ```
 
-Radiation  
+Radiation Time Series 
 =======================================================================
 
 Column {data-width=600}
@@ -107,7 +107,7 @@ Column {data-width=600}
 
 ### Radiation timeseries  
 ```{r}
-radiation_plots(data,vars_radiometer,vars_NETRAD,vars_PPFD)
+radiation_plots(data,vars_radiometer,vars_NETRAD,vars_PPFD,var_potential_rad)
 ```
 
 Column {data-width=400}
@@ -123,6 +123,57 @@ scatter_plot_QCQA(data,vars_radiometer[1],vars_PPFD[1], "SW_IN (W/m2)","PPFD_IN 
 ```{r}
 scatter_plot_QCQA(data,vars_radiometer[2],vars_PPFD[2], "SW_OUT (W/m2)","PPFD_OUT (µmolPhoton/m2/s1)",00)
 ```
+
+Radiation Diagnostics
+=======================================================================
+
+Column {data-width=600}
+-----------------------------------------------------------------------
+
+### Checking for offsets with potential radiation  
+```{r}
+# CREATE FUNCTION!!
+p <- ggplot() +
+  geom_point(data = diurnal.composite, aes(x = time, y = potential_radiation), color = "steelblue",size = 0.5) +
+  geom_point(data = diurnal.composite, aes(x = time, y = SW_IN), color = "red",linetype="dashed",size = 0.5) +
+  geom_point(data = diurnal.composite, aes(x = time, y = exceeds), color = "black",size = 0.75)+
+  scale_x_datetime(breaks="6 hours", date_labels = "%R")
+
+p <- ggplotly(p+ facet_wrap(~as.factor(firstdate))) %>% toWebGL()
+p
+```
+
+Column {data-width=400}
+-----------------------------------------------------------------------
+
+### Cross correlation analysis
+```{r}
+# CREATE FUNCTION!!
+# Calculate % of instances when SW_IN > potential_radiation (for daytime only)
+
+# Find daytime indices
+ind_day <- which(diurnal.composite$SW_IN > 20)
+
+# Find periods when SW_IN > potential_radiation
+ind_exceeds <- which(diurnal.composite$SW_IN[ind_day] > diurnal.composite$potential_radiation[ind_day])
+
+exceeds <- length(ind_exceeds)/length(ind_day)*100
+
+ccf_obj <- ccf(diurnal.composite$potential_radiation, diurnal.composite$SW_IN)
+
+Find_Max_CCF<- function(a,b)
+{
+  d <- ccf(a, b, plot = FALSE)
+  cor = d$acf[,,1]
+  lag = d$lag[,,1]
+  res = data.frame(cor,lag)
+  res_max = res[which.max(res$cor),]
+  return(res_max)
+}
+
+Find_Max_CCF(diurnal.composite$potential_radiation[is.finite(diurnal.composite$potential_radiation)], diurnal.composite$SW_IN[is.finite(diurnal.composite$SW_IN)])
+```
+
 
 Pressure 
 =======================================================================
