--- a/data_visualization/dashboard_data_QCQA.Rmd
+++ b/data_visualization/dashboard_data_QCQA.Rmd
@@ -16,6 +16,8 @@ library(shiny)
 library(dplyr)
 library(plotly)
 library(ggplot2)
+library(ggpubr)
+library(forecast)
 library(knitr)
 library(lubridate)
 library(hms)
@@ -127,44 +129,32 @@ scatter_plot_QCQA(data,vars_radiometer[2],vars_PPFD[2], "SW_OUT (W/m2)","PPFD_OU
 Radiation Diagnostics
 =======================================================================
 
-Row {data-height=600}
+Row 
 -----------------------------------------------------------------------
 
 ### Checking for offsets between SW_IN (blue) and potential radiation (red)  
 ```{r}
 SWIN_vs_potential_rad(diurnal.composite)
 ```
+
+### Cross between SW_IN and potential radiation
+```{r}
+p <- xcorr_rad(diurnal.composite)
+toWebGL(p[[1]])
+```
+
+Row 
+------------------------------------------------------------------------
+
 ### Checking for offsets between PPFD_IN (green) and potential radiation (red)  
 ```{r}
 PPFDIN_vs_potential_rad(diurnal.composite)
 ```
 
-### Cross correlation analysis
+### Cross correlation analysis between PPDF_IN and potential radiation
 ```{r}
-# CREATE FUNCTION!!
-# Calculate % of instances when SW_IN > potential_radiation (for daytime only)
-
-# Find daytime indices
-ind_day <- which(diurnal.composite$SW_IN > 20)
-
-# Find periods when SW_IN > potential_radiation
-ind_exceeds <- which(diurnal.composite$SW_IN[ind_day] > diurnal.composite$potential_radiation[ind_day])
-
-exceeds <- length(ind_exceeds)/length(ind_day)*100
-
-ccf_obj <- ccf(diurnal.composite$potential_radiation, diurnal.composite$SW_IN)
-
-Find_Max_CCF<- function(a,b)
-{
-  d <- ccf(a, b, plot = FALSE)
-  cor = d$acf[,,1]
-  lag = d$lag[,,1]
-  res = data.frame(cor,lag)
-  res_max = res[which.max(res$cor),]
-  return(res_max)
-}
-
-Find_Max_CCF(diurnal.composite$potential_radiation[is.finite(diurnal.composite$potential_radiation)], diurnal.composite$SW_IN[is.finite(diurnal.composite$SW_IN)])
+p <- xcorr_rad(diurnal.composite)
+toWebGL(p[[2]])
 ```
 
 
@@ -190,7 +180,7 @@ Column {data-width=400}
 
 Other met {data-orientation=rows} 
 =======================================================================
-Row {data-height=600}
+Row {data-height=900}
 -------------------------------------
 
 ### Additional meteorological variables
